--- a/test/index.html
+++ b/test/index.html
@@ -42,6 +42,12 @@
         });
     });
 
+    $(function () {
+        edsUI.mask().html('标题',"" +
+                "<div>" +
+                "<input type='text' class='input-control' />" +
+                "</div>");
+    })
 
 </script>
 </body>
