update dependency managerment

--- a/sample.html
+++ b/sample.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>edsUI示例</title>
-    <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="library/edsUI/themes/default/style.css">
+    <link rel="stylesheet" href="web/vendor/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="themes/default/style.css">
 </head>
 <body>
     <div class="container">
@@ -17,9 +17,9 @@
         <button class="btn btn-info btn-sm" id="prompt">输入弹出框</button>
     </div>
 
-    <script src="vendor/jquery/dist/jquery.min.js"></script>
-    <script src="vendor/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="library/edsUI/edsUI.js"></script>
+    <script src="web/vendor/jquery/dist/jquery.min.js"></script>
+    <script src="web/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="edsUI.js"></script>
 
     <script>
         var $container = $('.container');
