code refactor for gulp

--- a/sample.html
+++ b/sample.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>edsUI示例</title>
     <link rel="stylesheet" href="web/vendor/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="themes/default/style.css">
+    <link rel="stylesheet" href="dist/css/edsUI.css">
 </head>
 <body>
     <div class="container">
@@ -19,7 +19,7 @@
 
     <script src="web/vendor/jquery/dist/jquery.min.js"></script>
     <script src="web/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="edsUI.js"></script>
+    <script src="dist/js/edsUI.min.js"></script>
 
     <script>
         var $container = $('.container');
